--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@11ty/eleventy": "^3.1.2",
     "dotenv": "^17.2.3",
     "js-yaml": "^4.1.1",
+    "markdown-it-anchor": "^9.2.0",
+    "markdown-it-footnote": "^4.0.0",
     "qrcode": "^1.5.4"
   }
 }
